# gpl-sources

audiodecoder.2sf/: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
audiodecoder.2sf/audiodecoder.2sf/: addon.xml.in
audiodecoder.2sf/debian/: changelog.in  control  copyright  rules
audiodecoder.2sf/lib/: kodi-vio2sf-note.txt
audiodecoder.2sf/src/: 2SFCodec.cpp  2SFCodec.h
audiodecoder.asap/: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
audiodecoder.asap/audiodecoder.asap/: addon.xml.in
audiodecoder.asap/debian/: changelog.in  control  copyright  rules
audiodecoder.asap/lib/: kodi-asap-code-note.txt
audiodecoder.asap/src/: ASAPCodec.cpp  ASAPCodec.h
audiodecoder.dumb/: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
audiodecoder.dumb/audiodecoder.dumb/: addon.xml.in
audiodecoder.dumb/debian/: changelog.in  control  copyright  rules
audiodecoder.dumb/lib/: kodi-dumb-note.txt
audiodecoder.dumb/src/: DumbCodec.cpp  DumbCodec.h
audiodecoder.fluidsynth/: .travis.yml  CMakeLists.txt  FindFluidSynth.cmake  Jenkinsfile  README.md  appveyor.yml
audiodecoder.fluidsynth/audiodecoder.fluidsynth/: addon.xml.in
audiodecoder.fluidsynth/debian/: changelog.in  control  copyright  kodi-audiodecoder-fluidsynth.install  rules
audiodecoder.fluidsynth/src/: FluidDecoder.cpp  FluidDecoder.h
audiodecoder.gme/: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
audiodecoder.gme/audiodecoder.gme/: addon.xml.in
audiodecoder.gme/debian/: changelog.in  control  copyright  rules
audiodecoder.gme/src/: GMECodec.cpp  GMECodec.h
audiodecoder.gsf/: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
audiodecoder.gsf/audiodecoder.gsf/: addon.xml.in
audiodecoder.gsf/debian/: changelog.in  control  copyright  rules
audiodecoder.gsf/lib/: kodi-psflib-note.txt  kodi-viogsf-note.txt
audiodecoder.gsf/src/: GSFCodec.cpp  GSFCodec.h
audiodecoder.modplug/: .travis.yml  CMakeLists.txt  Doxyfile.in  FindModplug.cmake  README.md  appveyor.yml  azure-pipelines.yml
audiodecoder.modplug/audiodecoder.modplug/: addon.xml.in
audiodecoder.modplug/debian/: changelog.in  control  copyright  rules
audiodecoder.modplug/src/: ModplugCodec.cpp  ModplugCodec.h
audiodecoder.ncsf/: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
audiodecoder.ncsf/audiodecoder.ncsf/: addon.xml.in
audiodecoder.ncsf/debian/: changelog.in  control  copyright  rules
audiodecoder.ncsf/lib/: kodi-SSEQPlayer-note.txt
audiodecoder.ncsf/src/: NCSFCodec.cpp  NCSFCodec.h
audiodecoder.nosefart/: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
audiodecoder.nosefart/audiodecoder.nosefart/: addon.xml.in
audiodecoder.nosefart/debian/: changelog.in  control  copyright  rules
audiodecoder.nosefart/lib/: kodi-nosefart-note.txt
audiodecoder.nosefart/src/: NSFCodec.cpp  NSFCodec.h
audiodecoder.openmpt/: .travis.yml  CMakeLists.txt  FindOpenmpt.cmake  README.md  appveyor.yml  azure-pipelines.yml
audiodecoder.openmpt/audiodecoder.openmpt/: addon.xml.in
audiodecoder.openmpt/debian/: changelog.in  control  copyright  rules
audiodecoder.openmpt/src/: OpenMptCodec.cpp  OpenMptCodec.h
audiodecoder.organya/: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
audiodecoder.organya/audiodecoder.organya/: addon.xml.in
audiodecoder.organya/debian/: changelog.in  control  copyright  rules
audiodecoder.organya/src/: OrganyaCodec.cpp  OrganyaCodec.h
audiodecoder.qsf/: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
audiodecoder.qsf/audiodecoder.qsf/: addon.xml.in
audiodecoder.qsf/debian/: changelog.in  control  copyright  rules
audiodecoder.qsf/lib/: kodi-psflib-note.txt  kodi_highly_quixotic-note.txt
audiodecoder.qsf/src/: QSFCodec.cpp  QSFCodec.h  QSoundRom.h
audiodecoder.sidplay/: .travis.yml  CMakeLists.txt  FindResid.cmake  FindSidplay2.cmake  README.md  appveyor.yml  azure-pipelines.yml
audiodecoder.sidplay/audiodecoder.sidplay/: addon.xml.in
audiodecoder.sidplay/debian/: changelog.in  control  copyright  rules
audiodecoder.sidplay/src/: SIDCodec.cpp  SIDCodec.h
audiodecoder.snesapu/: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
audiodecoder.snesapu/audiodecoder.snesapu/: addon.xml.in
audiodecoder.snesapu/debian/: changelog.in  control  copyright  rules
audiodecoder.ssf/: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
audiodecoder.stsound/: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
audiodecoder.timidity/: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
audiodecoder.upse/: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
audiodecoder.usf/: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
audiodecoder.vgmstream/: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
audiodecoder.wsr/: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
audioencoder.flac/: .travis.yml  CMakeLists.txt  FindFLAC.cmake  README.md  appveyor.yml  azure-pipelines.yml
audioencoder.lame/: .travis.yml  CMakeLists.txt  FindMPGHIP.cmake  README.md  appveyor.yml  azure-pipelines.yml
audioencoder.vorbis/: .travis.yml  CMakeLists.txt  FindOgg.cmake  FindVorbis.cmake  FindVorbisEnc.cmake  README.md  appveyor.yml  azure-pipelines.yml
audioencoder.wav/: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
dbus/: NEWS  (+7 more)
dbus-glib/: ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac
eventlircd/: AUTHORS  Makefile.am  README.md  configure.ac
game.libretro.4do/: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
game.libretro.fmsx/: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
game.libretro.mame2003_plus/: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
(+8184 files in other folders)
